--- a/mi primer proyecto.ipynb
+++ b/mi primer proyecto.ipynb
@@ -50,9 +50,7 @@
     "\n",
     "df['A'] = df['A'].append(colA_extra)\n",
     "df['B'] = df['B'].append(colB_extra)\n",
-    "df['Columna tercera'] = df['Columna tercera'].append(colC_extra)\n",
-    "\n",
-    " "
+    "df['Columna tercera'] = df['Columna tercera'].append(colC_extra)"
    ]
   }
  ],
