--- a/extrae_pdf.ipynb
+++ b/extrae_pdf.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# crea un archivo llamado \"pdf.xlsx\"\n",
-    "writer = pd.ExcelWriter(\"pdf.xlsx\")\n",
+    "writer = pd.ExcelWriter(\"resultados/pdf.xlsx\")\n",
     "# la idea es guardar cada tabla en una hoja aparte dentro del mismo excel\n",
     "\n",
     "doc[0].to_excel(writer, sheet_name = \"tabla 1\")\n",
@@ -214,8 +214,8 @@
     "        of.write(txt)\n",
     " \n",
     "input_pdf = 'fuentes de datos/extrae pdf/Brown - 2021 - En las ruinas del neoliberalismo el ascenso de la.pdf'\n",
-    "output_txt = 'brown.txt'\n",
-    "pdf_to_text(input_pdf,output_txt)\n"
+    "output_txt = 'resultados/brown.txt'\n",
+    "pdf_to_text(input_pdf,output_txt)"
    ]
   },
   {
@@ -245,7 +245,7 @@
     "        of.write(txt)\n",
     "\n",
     "input_pdf = 'fuentes de datos/extrae pdf/Brown - 2021 - En las ruinas del neoliberalismo el ascenso de la.pdf'\n",
-    "output_txt = 'brown.txt'\n",
+    "output_txt = 'resultados/brown.txt'\n",
     "pdf_to_text(input_pdf,output_txt)\n"
    ]
   }
@@ -266,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
