--- a/web scraping.ipynb
+++ b/web scraping.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# mis primeros intentos fallidos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -82,6 +90,140 @@
     "\n",
     "\n",
     "        # si hago cambios aqui\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# código Victor"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## importar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%\n",
+    "import selenium\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.support.ui import Select\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "\n",
+    "# /robots.txt\n",
+    "# Chrome drive \n",
+    "# Selenium library\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## proceso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%\n",
+    "\n",
+    "driver = webdriver.Chrome(executable_path= \"chromedriver_win32 (1)\\chromedriver.exe\")\n",
+    "url = \"https://www.portalinmobiliario.com/arriendo/departamento/valparaiso\"\n",
+    "\n",
+    "driver.get(url)\n",
+    "time.sleep(2)\n",
+    "# xpath = \"/html/body/main/div/div[2]/section/div[5]/ul/li[3]\"\n",
+    "clase_precio = \"price-tag-fraction\"\n",
+    "clase_m2 = \"ui-search-card-attributes__attribute\"\n",
+    "\n",
+    "# clase_boton = \"andes-pagination__arrow-title\"\n",
+    "\n",
+    "lista = driver.find_elements(By.CLASS_NAME, clase_precio)\n",
+    "precio = [element.text for element in lista]\n",
+    "\n",
+    "lista = driver.find_elements(By.CLASS_NAME, clase_m2)\n",
+    "\n",
+    "metros = [element.text for element in lista]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# element = driver.find_element(By.LINK_TEXT, \"Siguiente\")\n",
+    "\n",
+    "# actions = ActionChains(driver)\n",
+    "# actions.move_to_element(element).click().perform()\n",
+    "# # element.click()\n",
+    "\n",
+    "# # time.sleep(2)\n",
+    "# lista = driver.find_elements(By.CLASS_NAME, clase_precio)\n",
+    "# precio1 = [element.text for element in lista]\n",
+    "\n",
+    "# lista = driver.find_elements(By.CLASS_NAME, clase_m2)\n",
+    "# m21 = [element.text for element in lista]\n",
+    "\n",
+    "\n",
+    "# precio = precio + precio1\n",
+    "# m2 = m2+m21\n",
+    "\n",
+    "\n",
+    "driver.close()    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## aplicar a varios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%\n",
+    "i=0\n",
+    "metros_datos = []\n",
+    "\n",
+    "while i<len(metros):\n",
+    "    aux = metros[i]\n",
+    "    metros_datos.append(aux)\n",
+    "    i+=2\n",
+    "    \n",
+    "i=1\n",
+    "dorm_datos = []\n",
+    "while i<len(metros):\n",
+    "    aux = metros[i]\n",
+    "    dorm_datos.append(aux)\n",
+    "    i+=2\n",
+    "    \n",
+    "datos = {\"precio\": precio,\n",
+    "         \"metros\": metros_datos,\n",
+    "         \"dormitorio\": dorm_datos}    \n",
+    "df = pd.DataFrame(datos)"
    ]
   }
  ],
