--- a/web scraping.ipynb
+++ b/web scraping.ipynb
@@ -5,116 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# mis primeros intentos fallidos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "url = 'https://www.portalinmobiliario.com/arriendo/departamento/valparaiso'\n",
-    "response = requests.get(url)\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "titles = soup.find_all('span', {'class': 'property-card-title'})\n",
-    "for title in titles:\n",
-    "    print(title.text)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "url = 'https://www.portalinmobiliario.com/arriendo/departamento/valparaiso'\n",
-    "response = requests.get(url)\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "titles = soup.find_all('span', {'class': 'property-card-title'})\n",
-    "\n",
-    "with open('titulos_arriendos.txt', 'w') as file:\n",
-    "    for title in titles:\n",
-    "        file.write(title.text + '\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "url = 'https://www.portalinmobiliario.com/MLC-1281625714-departamento-3-norte-id-43993-_JM#position=1&search_layout=stack&type=item&tracking_id=8bd5791e-f759-4f7f-b260-848deb520638'\n",
-    "response = requests.get(url)\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "data = soup.find_all('div', {'class': 'property-data-box'})\n",
-    "\n",
-    "with open('informacion_departamento.txt', 'w') as file:\n",
-    "    for i in data:\n",
-    "        file.write(i.text + '\\n')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# este caso sí resultó pero es con una página de prueba\n",
-    "\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "url = 'https://books.toscrape.com/'\n",
-    "response = requests.get(url)\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "titles = soup.find_all('h3')\n",
-    "prices = soup.find_all('p', {'class': 'price_color'})\n",
-    "\n",
-    "with open('informacion_libros.txt', 'w') as file:\n",
-    "    for i in range(len(titles)):\n",
-    "        file.write(titles[i].text + ' - ' + prices[i].text + '\\n')\n",
-    "\n",
-    "\n",
-    "        # si hago cambios aqui\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# código Victor"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## importar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%\n",
     "import selenium\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -129,8 +28,7 @@
     "\n",
     "# /robots.txt\n",
     "# Chrome drive \n",
-    "# Selenium library\n",
-    "\n"
+    "# Selenium library"
    ]
   },
   {
@@ -143,13 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\redk8\\AppData\\Local\\Temp\\ipykernel_13236\\1981000721.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(executable_path= \"chromedriver\\chromedriver.exe\")\n"
+     ]
+    }
+   ],
    "source": [
-    "#%%\n",
-    "\n",
-    "driver = webdriver.Chrome(executable_path= \"chromedriver_win32 (1)\\chromedriver.exe\")\n",
+    "driver = webdriver.Chrome(executable_path= \"chromedriver\\chromedriver.exe\")\n",
     "url = \"https://www.portalinmobiliario.com/arriendo/departamento/valparaiso\"\n",
     "\n",
     "driver.get(url)\n",
@@ -157,6 +62,7 @@
     "# xpath = \"/html/body/main/div/div[2]/section/div[5]/ul/li[3]\"\n",
     "clase_precio = \"price-tag-fraction\"\n",
     "clase_m2 = \"ui-search-card-attributes__attribute\"\n",
+    "direccion = \"ui-search-item__group__element ui-search-item__location shops__items-group-details\"\n",
     "\n",
     "# clase_boton = \"andes-pagination__arrow-title\"\n",
     "\n",
@@ -164,10 +70,12 @@
     "precio = [element.text for element in lista]\n",
     "\n",
     "lista = driver.find_elements(By.CLASS_NAME, clase_m2)\n",
-    "\n",
     "metros = [element.text for element in lista]\n",
     "\n",
+    "lista = driver.find_elements(By.CLASS_NAME, direccion)\n",
+    "ubicacion = [element.text for element in lista]\n",
     "\n",
+    "# aplicar a varias páginas?\n",
     "\n",
     "# element = driver.find_element(By.LINK_TEXT, \"Siguiente\")\n",
     "\n",
@@ -182,10 +90,8 @@
     "# lista = driver.find_elements(By.CLASS_NAME, clase_m2)\n",
     "# m21 = [element.text for element in lista]\n",
     "\n",
-    "\n",
     "# precio = precio + precio1\n",
     "# m2 = m2+m21\n",
-    "\n",
     "\n",
     "driver.close()    "
    ]
@@ -195,16 +101,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## aplicar a varios"
+    "## separar metros y dormitorios"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "All arrays must be of the same length",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13236\\359484695.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m          \"dormitorio\": dorm_datos}    \n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"arriendosPortalInmobiliario.xlsx\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\redk8\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    634\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    635\u001b[0m             \u001b[1;31m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 636\u001b[1;33m             \u001b[0mmgr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict_to_mgr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtyp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmanager\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    637\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    638\u001b[0m             \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmrecords\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmrecords\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\redk8\\anaconda3\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36mdict_to_mgr\u001b[1;34m(data, index, columns, dtype, typ, copy)\u001b[0m\n\u001b[0;32m    500\u001b[0m         \u001b[1;31m# TODO: can we get rid of the dt64tz special case above?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    501\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 502\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtyp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtyp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconsolidate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    503\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    504\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\redk8\\anaconda3\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[0m\n\u001b[0;32m    118\u001b[0m         \u001b[1;31m# figure out the index, if necessary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    119\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 120\u001b[1;33m             \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_extract_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    121\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    122\u001b[0m             \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mensure_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\redk8\\anaconda3\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36m_extract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    672\u001b[0m             \u001b[0mlengths\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw_lengths\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    673\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlengths\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 674\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"All arrays must be of the same length\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    675\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    676\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mhave_dicts\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: All arrays must be of the same length"
+     ]
+    }
+   ],
    "source": [
-    "#%%\n",
     "i=0\n",
     "metros_datos = []\n",
     "\n",
@@ -219,12 +140,25 @@
     "    aux = metros[i]\n",
     "    dorm_datos.append(aux)\n",
     "    i+=2\n",
+    "\n",
+    "#si intento añadir \"ubicacion\" como primer elemento de la base no me funiona \n",
     "    \n",
-    "datos = {\"precio\": precio,\n",
+    "datos = {\"ubicacion\": ubicacion,\n",
+    "         \"precio\": precio,\n",
     "         \"metros\": metros_datos,\n",
     "         \"dormitorio\": dorm_datos}    \n",
-    "df = pd.DataFrame(datos)"
+    "         \n",
+    "df = pd.DataFrame(datos)\n",
+    "\n",
+    "df.to_excel(\"arriendosPortalInmobiliario.xlsx\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -243,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
