scraping añade link

--- a/extrae_pdf.ipynb
+++ b/extrae_pdf.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nothing done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%reset"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -18,17 +35,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tipo de objeto: <class 'list'>\n",
+      "número de elementos: 3\n"
+     ]
+    }
+   ],
    "source": [
     "# importamos librerias\n",
     "from tabula import read_pdf\n",
-    "#no etniendo...dbería importar tabula y con ello la funcíon, no eitneod por qué import + funcion\n",
+    "#no etniendo...dbería importar tabula y con ello la funcíon, no eitneod por qué import + funcion / R : porque read_pdf es un módulo probablemente\n",
     "import pandas as pd\n",
     "\n",
     "# leer pdf \n",
-    "doc = read_pdf(\"fuentes de datos/extrae pdf/FMCA_17412886-3_202207_U_.pdf\", pages = \"all\")\n",
+    "doc = read_pdf(\"fuentes de datos/epubPdf_toMarkdownTxt/FMCA_17412886-3_202207_U_.pdf\", pages = \"all\")\n",
     "\n",
     "# devuelve una lista, que la llamamos \"doc\" que contiene el número de dataframes de acuerdo a las tablas que encontró.abs(x)\n",
     "print(\"tipo de objeto:\",type(doc))\n",
@@ -38,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# crea un archivo llamado \"pdf.xlsx\"\n",
-    "writer = pd.ExcelWriter(\"resultados/pdf.xlsx\")\n",
+    "# crea un archivo llamado \"tablas fundos mutuos.xlsx\"\n",
+    "writer = pd.ExcelWriter(\"resultados/tablas fondos mutuos.xlsx\")\n",
     "# la idea es guardar cada tabla en una hoja aparte dentro del mismo excel\n",
     "\n",
     "doc[0].to_excel(writer, sheet_name = \"tabla 1\")\n",
@@ -80,7 +106,7 @@
     "#importamos la libreria glob\n",
     "import glob\n",
     "\n",
-    "path = r\"C:\\Users\\redk8\\Documents\\Proyectos en Python\\python_general\\fuentes de datos\\fondos mutuos\\*.pdf\"\n",
+    "path = r\"C:\\Users\\redk8\\Documents\\Proyectos en Python\\python_general\\fuentes de datos\\epubPdf_toMarkdownTxt\\FMCA*.pdf\"\n",
     "files = glob.glob(path)\n",
     "print(files)\n",
     "\n",
@@ -109,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,17 +156,16 @@
     "    # Save the Excel file\n",
     "    writer.save()\n",
     "\n",
-    "\n",
     "pdf_files = [\n",
-    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\extrae pdf\\\\FMCA_17412886-3_202207_U_.pdf',\n",
-    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\extrae pdf\\\\FMCA_17412886-3_202208_U_.pdf',\n",
-    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\extrae pdf\\\\FMCA_17412886-3_202209_U_.pdf',\n",
-    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\extrae pdf\\\\FMCA_17412886-3_202210_U_.pdf',\n",
-    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\extrae pdf\\\\FMCA_17412886-3_202211_U_.pdf',\n",
-    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\extrae pdf\\\\FMCA_17412886-3_202212_U_.pdf'\n",
+    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\epubPdf_toMarkdownTxt\\\\FMCA_17412886-3_202207_U_.pdf',\n",
+    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\epubPdf_toMarkdownTxt\\\\FMCA_17412886-3_202208_U_.pdf',\n",
+    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\epubPdf_toMarkdownTxt\\\\FMCA_17412886-3_202209_U_.pdf',\n",
+    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\epubPdf_toMarkdownTxt\\\\FMCA_17412886-3_202210_U_.pdf',\n",
+    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\epubPdf_toMarkdownTxt\\\\FMCA_17412886-3_202211_U_.pdf',\n",
+    "    'C:\\\\Users\\\\redk8\\\\Documents\\\\Proyectos en Python\\\\python_general\\\\fuentes de datos\\\\epubPdf_toMarkdownTxt\\\\FMCA_17412886-3_202212_U_.pdf'\n",
     "]\n",
     "\n",
-    "process_pdfs(pdf_files, \"resultados/pdfs.xlsx\")\n"
+    "process_pdfs(pdf_files, \"resultados/tablas fondos mutuos v.2.xlsx\")\n"
    ]
   },
   {
@@ -148,43 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extraer texto de pdf (antiguo intento) no funciona con GHAT GPT me manda una función antigua y no actualiza bien cuando le pido"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<PyPDF2._reader.PdfReader object at 0x000001BF571330A0>\n"
-     ]
-    }
-   ],
-   "source": [
-    "# importando PyPDF2\n",
-    "import PyPDF2\n",
-    "\n",
-    "# abriendo el pdf\n",
-    "pdf_file = open(\"fuentes de datos/extrae pdf/Brown - 2021 - En las ruinas del neoliberalismo el ascenso de la.pdf\", 'rb')\n",
-    "pdf_extracto = PyPDF2.PdfReader(pdf_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# iterando sobre las páginas del pdf\n",
-    "for page in range(pdf_reader.numPages):\n",
-    "    # extraer el texto de la página\n",
-    "    text = pdf_reader.getPage(page).extractText()\n",
-    "    print(text)"
+    "# Extraer texto de pdf"
    ]
   },
   {
@@ -198,7 +187,9 @@
     "from pdfminer.converter import TextConverter\n",
     "from pdfminer.layout import LAParams\n",
     "import io\n",
-    " \n",
+    "\n",
+    "input_pdf = 'fuentes de datos/epubPdf_toMarkdownTxt/Brown - 2021 - En las ruinas del neoliberalismo el ascenso de la.pdf'\n",
+    "\n",
     "def pdf_to_text(input_file,output):\n",
     "    i_f = open(input_file,'rb')\n",
     "    resMgr = PDFResourceManager()\n",
@@ -213,40 +204,11 @@
     "    with open(output,'w') as of:\n",
     "        of.write(txt)\n",
     " \n",
-    "input_pdf = 'fuentes de datos/extrae pdf/Brown - 2021 - En las ruinas del neoliberalismo el ascenso de la.pdf'\n",
-    "output_txt = 'resultados/brown.txt'\n",
-    "pdf_to_text(input_pdf,output_txt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pdfminer.pdfpage import PDFPage\n",
-    "from pdfminer.pdfinterp import PDFResourceManager, PDFPageInterpreter\n",
-    "from pdfminer.converter import TextConverter\n",
-    "from pdfminer.layout import LAParams\n",
-    "import io\n",
+    "output_txt = 'resultados/Brown - 2021 - En las ruinas del neoliberalismo el ascenso de la.txt'\n",
+    "pdf_to_text(input_pdf,output_txt)\n",
     "\n",
-    "def pdf_to_text(input_file,output):\n",
-    "    i_f = open(input_file,'rb')\n",
-    "    resMgr = PDFResourceManager()\n",
-    "    retData = io.StringIO()\n",
-    "    TxtConverter = TextConverter(resMgr,retData, laparams= LAParams())\n",
-    "    interpreter = PDFPageInterpreter(resMgr,TxtConverter)\n",
-    "    for page in PDFPage.get_pages(i_f):\n",
-    "        interpreter.process_page(page)\n",
     "\n",
-    "    txt = retData.getvalue()\n",
-    "    print(txt)\n",
-    "    with open(output,'w', encoding='utf-8') as of:\n",
-    "        of.write(txt)\n",
-    "\n",
-    "input_pdf = 'fuentes de datos/extrae pdf/Brown - 2021 - En las ruinas del neoliberalismo el ascenso de la.pdf'\n",
-    "output_txt = 'resultados/brown.txt'\n",
-    "pdf_to_text(input_pdf,output_txt)\n"
+    "\n"
    ]
   }
  ],
@@ -266,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
